[package]
name = "ccm-demo"
version = "0.0.1"
edition = "2018"
authors = [ "Thales Fragoso <thales.fragosoz@gmail.com>"]
publish = false

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = "0.5.0"
rand_core = "0.6.3"

nrf52810-hal = { path = "../../nrf52810-hal", features = ["rt"], optional = true }
nrf52811-hal = { path = "../../nrf52811-hal", features = ["rt"], optional = true }
nrf52832-hal = { path = "../../nrf52832-hal", features = ["rt"], optional = true }
nrf52840-hal = { path = "../../nrf52840-hal", features = ["rt"], optional = true }
nrf52833-hal = { path = "../../nrf52833-hal", features = ["rt"], optional = true }

[[bin]]
name = "ccm-demo"
doc = false
test = false

[features]
52810 = ["nrf52810-hal"]
52811 = ["nrf52811-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]
52833 = ["nrf52833-hal"]
