[package]
name = "comp-demo"
version = "0.1.0"
authors = ["Henrik AlseÌr"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.7.0", features = ["device"] }
cortex-m-rtic = { version = "1.0.0", default-features = false }
embedded-hal = "1.0.0"
rtt-target = { version = "0.5.0", features = ["cortex-m"] }
nrf52840-hal = { features = ["rt"], path = "../../nrf52840-hal" }
